Bug 912321: Define the 'runOffThreadScript' function in the JavaScript shell, for testing off-thread compilation. r=bhackett1024